Fix overflow of upper bar

--- a/frontend/styles/view/main/upper-bar.css
+++ b/frontend/styles/view/main/upper-bar.css
@@ -1,7 +1,8 @@
 #header {
 	height: var(--lumo-size-xl);
-	width: 100%;
+	min-width: 100%;
 	align-items: center;
+	overflow-x: auto;
 }
 
 #header img {
